# Shipment-Price-Prediction-ML-Project

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  template.py
artifacts/06_16_2026_02_04_25/DataIngestionArtifacts/Test/: test.csv
artifacts/06_16_2026_02_04_25/DataIngestionArtifacts/Train/: train.csv
config/: model.yaml  schema.yaml
notebooks/: 1._EDA_Shipment-Pricing-Prediction.ipynb  2._Feature_Engineering__Model_Shipment-Pricing-Prediction.ipynb
shipment/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
shipment/configuration/: mongo_operations.py
shipment/constants/: __init__.py
shipment/entity/: artifacts_entity.py  config_entity.py
shipment/logger/: __init__.py
shipment/pipline/: training_pipeline.py
shipment/utils/: main_utils.py
