[project]
name = "shipment-price-prediction-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.43.29",
    "catboost>=1.2.10",
    "category-encoders==2.5.1.post0",
    "dill>=0.4.1",
    "evidently==0.2.8",
    "fastapi>=0.125.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "mypy-boto3-s3>=1.43.14",
    "numpy<2.0",
    "pandas<2.0",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
